# SpojPractice

./: CMakeLists.txt  Onp.cpp  Prime1.cpp  README.md  Sbstr1.cpp  SegmentedSieve.cpp  SieveOfEratosthenes.cpp  SpojPractice.h  Test.cpp
